--- a/templates/index.html
+++ b/templates/index.html
@@ -8,8 +8,9 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h1 class="text-center mb-4">Сайт с прогнозом погоды в любой точке мира и новостями туризма в России </h1>
+    <h1 class="text-center mb-4">Сайт с прогнозом погоды в любой точке мира и новостями туризма в России</h1>
 
+    <!-- Форма для запроса города -->
     <form method="post" class="mb-4">
         <div class="form-group">
             <input type="text" name="city" class="form-control" placeholder="Введите город" required>
@@ -19,6 +20,7 @@
 
     <div class="result">
         {% if weather %}
+            <!-- Карточка с информацией о погоде -->
             <div class="card mb-4">
                 <div class="card-body">
                     <h3 class="card-title">Погода в {{ weather['name'] }}</h3>
@@ -27,12 +29,30 @@
                 </div>
             </div>
         {% elif error %}
+            <!-- Сообщение об ошибке -->
+            <div class="alert alert-danger" role="alert">
+                {{ error }}
+            </div>
+        {% endif %}
+
+        {% if quote %}
+            <!-- Карточка с рандомной цитатой -->
+            <div class="card mb-4">
+                <div class="card-body">
+                    <h3 class="card-title">Рандомная цитата</h3>
+                    <p class="card-text">Цитата: "{{ quote['content'] }}"</p>
+                    <p class="card-text">Автор: {{ quote['name'] }}</p>
+                </div>
+            </div>
+        {% elif error %}
+            <!-- Сообщение об ошибке -->
             <div class="alert alert-danger" role="alert">
                 {{ error }}
             </div>
         {% endif %}
 
         {% if news %}
+            <!-- Карточка с новостями туризма -->
             <div class="card mb-4">
                 <div class="card-body">
                     <h3 class="card-title">Новости туризма</h3>
@@ -46,20 +66,7 @@
                 </div>
             </div>
         {% elif error %}
-            <div class="alert alert-danger" role="alert">
-                {{ error }}
-            </div>
-        {% endif %}
-
-        {% if quote %}
-            <div class="card mb-4">
-                <div class="card-body">
-                    <h3 class="card-title">Рандомная цитата</h3>
-                    <p class="card-text">Цитата: "{{ quote['content'] }}"</p>
-                    <p class="card-text">Автор: {{ quote['name'] }}</p>
-                </div>
-            </div>
-        {% elif error %}
+            <!-- Сообщение об ошибке -->
             <div class="alert alert-danger" role="alert">
                 {{ error }}
             </div>
