--- a/templates/index.html
+++ b/templates/index.html
@@ -8,14 +8,14 @@
 </head>
 <body>
 <div class="container mt-5">
-    <h1 class="text-center mb-4">Сайт с прогнозом погоды в любой точке мира и новостями туризма в России</h1>
+    <h1 class="text-center mb-4">Собрался в отпуск? Узнай погодуи новости туризма в России</h1>
 
     <!-- Форма для запроса города -->
     <form method="post" class="mb-4">
         <div class="form-group">
             <input type="text" name="city" class="form-control" placeholder="Введите город" required>
         </div>
-        <button type="submit" class="btn btn-primary btn-block">Узнать погоду и новости туризма</button>
+        <button type="submit" class="btn btn-primary btn-block">Хочу знать</button>
     </form>
 
     <div class="result">
@@ -39,9 +39,11 @@
             <!-- Карточка с рандомной цитатой -->
             <div class="card mb-4">
                 <div class="card-body">
-                    <h3 class="card-title">Рандомная цитата</h3>
-                    <p class="card-text">Цитата: "{{ quote['content'] }}"</p>
-                    <p class="card-text">Автор: {{ quote['name'] }}</p>
+                    <h3 class="card-title">Цитаты в дорогу:</h3>
+                    <blockquote class="blockquote">
+                        <p class="mb-0">"{{ quote['content'] }}"</p>
+                        <footer class="blockquote-footer">{{ quote['name'] }}</footer>
+                    </blockquote>
                 </div>
             </div>
         {% elif error %}
